p text-align: justify deleted due accessibility issues

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -68,7 +68,6 @@ h3 {
 }
 p {
   font-size: var(--fs-paragraph);
-  text-align: justify;
 }
 a {
   font-size: var(--fs-link);
